[package]
name = "hash_test"
version = "0.1.0"
authors = ["Stephen Battista <stephen.battista@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["memmap"]


[dependencies]
anyhow = "1.0.25"
ring = "0.16.9"
blake3 = { version = "0.3.7", features = ["rayon"] }
data-encoding = "2.3.1"
memmap = { version = "0.7.0", optional = true }

