[package]
name = "hash_test"
version = "0.1.0"
authors = ["Stephen Battista <stephen.battista@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["memmap"]


[dependencies]
anyhow = "1.0.25"
ring = "0.16.9"
blake3 = { version = "1.3.0", features = ["rayon"] }
data-encoding = "2.3.1"
memmap = { version = "0.7.0", optional = true }
pretty-bytes = "0.2.2"

